# cmake_examples

./: .gitignore  CMakeLists.txt  README.md  main.cpp
math_class/: CMakeLists.txt
math_class/include/: math_class.h
math_class/src/: math_class.cpp
