# project(math_class)
# cmake_minimum_required(VERSION 2.8)

# include_directories(include)

# add_executable(test main.cpp ${CMAKE_SOURCE_DIR}/src/math_class.cpp)

# add_library(math_class SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/math_class.cpp
# )
# set_target_properties(math_class PROPERTIES PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include/mylib.h)

# ls -1 sources/*.cpp